# openhands-sre

./: .gitignore  AGENTS.md  DEMO.md  INCIDENT-131.md  INCIDENT-134.md  INCIDENT_KAN-7.md  INCIDENT_RESPONSE_KAN-6.md  README.md  optimize.py  pyproject.toml  run_demo.py
.claude/: settings.local.json
incident_reports/: incident-52-stale-lockfile.md  incident-54-service1-stale-lockfile.md
incidents/: 2026-03-02-service1-stale-lockfile-issue-42.md  2026-03-02-service1-stale-lockfile.md  2026-03-02-service2-readiness-probe-failure.md  2026-03-04-service1-stale-lockfile.md  2026-03-06-service1-stale-lockfile.md  2026-03-11-service1-stale-lockfile.md  2026-04-14-service1-stale-lockfile.md  INC-30-stale-lockfile.md  INC-46-service1-stale-lockfile.md  KAN-1-service1-stale-lockfile.md  KAN-2-service1-stale-lockfile.md  KAN-3-service1-stale-lockfile.md  KAN-4-service1-stale-lockfile.md  KAN-5-service1-stale-lockfile.md  KAN-6-service1-stale-lockfile.md  KAN-9-service1-stale-lockfile.md  incident-38-service1-stale-lockfile.md  incident-48-service1-stale-lockfile.md  incident-50-service1-stale-lockfile.md  incident-66-service1-stale-lockfile.md  issue-110-stale-lockfile-service1.md  issue-122-service1-stale-lockfile.md  issue-124-service1-stale-lockfile.md  issue-136-service1-stale-lockfile.md  issue-143-service1-stale-lockfile.md  issue-34-stale-lockfile.md  issue-58-service3-env-config.md  issue-72-service1-stale-lockfile.md  issue-76-stale-lockfile-service1.md  issue-85-service1-stale-lockfile.md  issue-91-stale-lockfile.md  service1-stale-lockfile-2026-03-11.md
(+61 files in other folders)
