[project]
name = "openhands-sre-demo"
version = "0.1.0"
description = "OpenHands Cloud SRE Demo - GitHub-integrated incident remediation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask==3.1.0",
  "mcp[cli]>=1.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
